rdo/app/rdo_console/trunk/test/syntax_error/syntax_error.rss
$Resources
	Парикмахерская    : Парикмахерские trace Свободен 0 0
	Парикмахерская_еще: Парикмахерские trace Свободен 0 0
$End